# libspatter

./: CMakeLists.txt  README.md
include/: spatter.h
src/: spatter.cc
